set(${PROJECT}_SRC_FILES
  qcron.cpp
  )

set(${PROJECT}_HEADERS
  qcron.hpp
  )

# Declaration.

add_library(${PROJECT} SHARED ${${PROJECT}_SRC_FILES})
qt5_use_modules(${PROJECT} ${QT_COMPONENTS})
set_target_properties(${PROJECT} PROPERTIES
  PUBLIC_HEADER "${${PROJECT}_HEADERS}"
  COMPILE_FLAGS "${EQUILAB_CXX_FLAGS}")

install(TARGETS ${PROJECT}
  LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIR}
  RUNTIME DESTINATION ${LIBRARY_OUTPUT_DIR}
  PUBLIC_HEADER DESTINATION ${PUBLIC_HEADER_DIR}/${PROJECT}
  COMPONENT library)
